--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,79 +1,118 @@
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
+  background-color: rgb(38, 43, 51);
+  color: white;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+
+  flex-direction: column;
+  align-items: center;
+
+  margin: 0;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+h2, h3 {
+  border-bottom: solid 1px rgb(159, 159, 159);
+  padding-bottom: 10px;
 }
 
-button {
+.totals {
+  border: none;
+  background-color: rgb(22, 25, 30);
+
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+  padding: 10px;
 }
 
-.card {
-  padding: 2em;
+#savings {
+  font-style: italic;
+  font-size: medium;
+  border-left: solid 5px rgb(98, 192, 98);
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+input {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  padding: 10px;
+  width: 95%;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
+#add-button{
+  width: 100%;
+  padding: 10px;
+  font-size: large;
+  font-weight: bold;
+  border-radius: 8px;
+  background-color: aliceblue;
+  transition: 0.2s;
+  border: none;
+}
+
+#add-button:hover{
+  background-color: rgb(86, 91, 96);
+  color: white;
+  transition: 0.2s;
+}
+
+#add-button:active{
+  background-color: rgb(0, 128, 255);
+  transition: 0s;
+}
+
+#cart {
+  list-style-type: none;
+  padding: 0;
+}
+
+#cart li {
+  background-color: rgb(22, 25, 30);
+  padding: 20px;
+
+  justify-content: center;
+
+  margin-bottom: 10px;
+  border-radius: 8px;
+}
+
+#cart li #price {
+  float: right;
+  margin-right: 5px;
+}
+
+#cart li #discount {
+  display: flexbox;
+  background-color: rgb(98, 192, 98);
+  
+  align-items: center;
+
+  border-radius: 6px;
+
+  padding: 5px;
+  float: right;
+  margin-top: -5px;
+}
+
+button.delete {
+  background-color: rgb(222, 105, 105);
+  color: white;
+
+  float: left;
+
+  margin: -2.5px 10px 10px 0px;
+  padding: 5px 10px;
+
+  border: none;
+  border-radius: 8px;
+
+  transition: 0.1s;
+}
+
+button.delete:hover {
+  background-color: rgb(255, 22, 22);
+  transition: 0.1s;
+}
